kubernetes/apps/o11y/grafana-operator/instance/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  hostnames:
    - grafana.cluster.local
  parentRefs:
    - name: cilium-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
